// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component test should render without crash with children elements 1`] = `
<Component
  className=""
  icon={
    Object {
      "icon": Array [
        512,
        512,
        Array [],
        "f042",
        "M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z",
      ],
      "iconName": "adjust",
      "prefix": "fas",
    }
  }
  noWrapper={false}
  onChange={null}
  placeholder=""
  value=""
>
  <Component
    className=""
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f042",
          "M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z",
        ],
        "iconName": "adjust",
        "prefix": "fas",
      }
    }
    onChange={null}
    placeholder=""
    value=""
  >
    <div
      className="field"
    >
      <div
        className="control has-icons-left"
      >
        <Component
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f042",
                "M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z",
              ],
              "iconName": "adjust",
              "prefix": "fas",
            }
          }
        >
          <span
            className="icon is-small is-left"
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f042",
                    "M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z",
                  ],
                  "iconName": "adjust",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-adjust fa-w-16 "
                data-icon="adjust"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </span>
        </Component>
        <SelectNoWrapper
          className=""
          onChange={null}
          placeholder=""
          value=""
        >
          <div
            className="select "
            onChange={null}
            placeholder=""
          >
            <select>
              <Component
                className=""
                disabled={false}
                key=".0"
                text=""
                value=""
              >
                <option
                  className=""
                  disabled={false}
                  value=""
                />
              </Component>
              <Component
                className=""
                disabled={false}
                key=".1"
                text=""
                value=""
              >
                <option
                  className=""
                  disabled={false}
                  value=""
                />
              </Component>
              <Component
                className=""
                disabled={false}
                key=".2"
                text=""
                value=""
              >
                <option
                  className=""
                  disabled={false}
                  value=""
                />
              </Component>
            </select>
          </div>
        </SelectNoWrapper>
      </div>
    </div>
  </Component>
</Component>
`;

exports[`Select component test should render without crash with wrapper 1`] = `
<Component
  className=""
  icon={null}
  noWrapper={false}
  onChange={null}
  placeholder=""
  value=""
>
  <Component
    className=""
    icon={null}
    onChange={null}
    placeholder=""
    value=""
  >
    <div
      className="field"
    >
      <div
        className="control null"
      >
        <SelectNoWrapper
          className=""
          onChange={null}
          placeholder=""
          value=""
        >
          <div
            className="select "
            onChange={null}
            placeholder=""
          >
            <select />
          </div>
        </SelectNoWrapper>
      </div>
    </div>
  </Component>
</Component>
`;

exports[`Select component test should render without crash with wrapper 2`] = `
<Component
  className=""
  icon={null}
  noWrapper={true}
  onChange={null}
  placeholder=""
  value=""
>
  <SelectNoWrapper
    className=""
    icon={null}
    onChange={null}
    placeholder=""
    value=""
  >
    <div
      className="select "
      onChange={null}
      placeholder=""
    >
      <select>
        <Component
          className=""
          disabled={false}
          key=".0"
          text=""
          value=""
        >
          <option
            className=""
            disabled={false}
            value=""
          />
        </Component>
        <Component
          className=""
          disabled={false}
          key=".1"
          text=""
          value=""
        >
          <option
            className=""
            disabled={false}
            value=""
          />
        </Component>
        <Component
          className=""
          disabled={false}
          key=".2"
          text=""
          value=""
        >
          <option
            className=""
            disabled={false}
            value=""
          />
        </Component>
      </select>
    </div>
  </SelectNoWrapper>
</Component>
`;
